@@ -84,6 +84,7 @@ static char sccsid[] = "@(#)ex_cmds2.c	1.18 (gritter) 2/17/05";
 #include "ex_temp.h"
 #include "ex_tty.h"
 #include "ex_vis.h"
+#include "compat.h"
 
 extern bool	pflag, nflag;		/* mjm: extern; also in ex_cmds.c */
 extern int	poffset;		/* mjm: extern; also in ex_cmds.c */
@@ -346,7 +347,7 @@ next(void)
 	morargc = argc;
 	isalt = (strcmp(altfile, args)==0) + 1;
 	if (savedfile[0])
-		strcpy(altfile, savedfile);
+		strlcpy(altfile, savedfile, sizeof altfile);
 	safecp(savedfile, args, sizeof savedfile, "File name too long");
 	argc--;
 	args = argv ? *++argv : strend(args) + 1;
