@@ -121,50 +121,50 @@ short	TCOLUMNS = 80;
 short	TLINES = 24;
 
 struct	option options[NOPTS + 1] = {
-	{ "autoindent",	"ai",	ONOFF,		0,	0,	0, },
-	{ "autoprint",	"ap",	ONOFF,		1,	1,	0, },
-	{ "autowrite",	"aw",	ONOFF,		0,	0,	0, },
-	{ "beautify",	"bf",	ONOFF,		0,	0,	0, },
-	{ "directory",	"dir",	STRING,		0,	0,	direct, },
-	{ "edcompatible","ed",	ONOFF,		0,	0,	0, },
-	{ "errorbells",	"eb",	ONOFF,		0,	0,	0, },
-	{ "exrc",	"ex",	ONOFF,		0,	0,	0, },
-	{ "flash",	"fl",	ONOFF,		1,	1,	0, },
-	{ "hardtabs",	"ht",	NUMERIC,	8,	8,	0, },
-	{ "ignorecase",	"ic",	ONOFF,		0,	0,	0, },
-	{ "lisp",	0,	ONOFF,		0,	0,	0, },
-	{ "list",	0,	ONOFF,		0,	0,	0, },
-	{ "magic",	0,	ONOFF,		1,	1,	0, },
-	{ "mesg",	0,	ONOFF,		1,	1,	0, },
-	{ "modelines",	"ml",	ONOFF,		0,	0,	0, },
-	{ "number",	"nu",	ONOFF,		0,	0,	0, },
-	{ "open",	0,	ONOFF,		1,	1,	0, },
-	{ "optimize",	"opt",	ONOFF,		0,	0,	0, },
-	{ "paragraphs",	"para",	STRING,		0,	0,	paragraphs, },
-	{ "prompt",	0,	ONOFF,		1,	1,	0, },
-	{ "readonly",	"ro",	ONOFF,		0,	0,	0, },
-	{ "redraw",	0,	ONOFF,		0,	0,	0, },
-	{ "remap",	0,	ONOFF,		1,	1,	0, },
-	{ "report",	0,	NUMERIC,	5,	5,	0, },
-	{ "scroll",	"scr",	NUMERIC,	12,	12,	0, },
-	{ "sections",	"sect",	STRING,		0,	0,	sections, },
-	{ "shell",	"sh",	STRING,		0,	0,	shell, },
-	{ "shiftwidth",	"sw",	NUMERIC,	TABS,	TABS,	0, },
-	{ "showmatch",	"sm",	ONOFF,		0,	0,	0, },
-	{ "showmode",	"smd",	ONOFF,		0,	0,	0, },
-	{ "slowopen",	"slow",	ONOFF,		0,	0,	0, },
-	{ "sourceany",	0,	ONOFF,		0,	0,	0, },
-	{ "tabstop",	"ts",	NUMERIC,	TABS,	TABS,	0, },
-	{ "taglength",	"tl",	NUMERIC,	0,	0,	0, },
-	{ "tags",	"tag",	STRING,		0,	0,	tags, },
-	{ "term",	0,	OTERM,		0,	0,	ttylongname, },
-	{ "terse",	0,	ONOFF,		0,	0,	0, },
-	{ "timeout",	"to",	ONOFF,		1,	1,	0, },
-	{ "ttytype",	"tty",	OTERM,		0,	0,	ttylongname, },
-	{ "warn",	0,	ONOFF,		1,	1,	0, },
-	{ "window",	"wi",	NUMERIC,	23,	23,	0, },
-	{ "wrapscan",	"ws",	ONOFF,		1,	1,	0, },
-	{ "wrapmargin",	"wm",	NUMERIC,	0,	0,	0, },
-	{ "writeany",	"wa",	ONOFF,		0,	0,	0, },
-	{ 0,		0,	0,		0,	0,	0, }
+	{ "autoindent",	"ai",	ONOFF,		0,	0,	0 },
+	{ "autoprint",	"ap",	ONOFF,		1,	1,	0 },
+	{ "autowrite",	"aw",	ONOFF,		0,	0,	0 },
+	{ "beautify",	"bf",	ONOFF,		0,	0,	0 },
+	{ "directory",	"dir",	STRING,		0,	0,	direct },
+	{ "edcompatible","ed",	ONOFF,		0,	0,	0 },
+	{ "errorbells",	"eb",	ONOFF,		0,	0,	0 },
+	{ "exrc",	"ex",	ONOFF,		0,	0,	0 },
+	{ "flash",	"fl",	ONOFF,		1,	1,	0 },
+	{ "hardtabs",	"ht",	NUMERIC,	8,	8,	0 },
+	{ "ignorecase",	"ic",	ONOFF,		0,	0,	0 },
+	{ "lisp",	0,	ONOFF,		0,	0,	0 },
+	{ "list",	0,	ONOFF,		0,	0,	0 },
+	{ "magic",	0,	ONOFF,		1,	1,	0 },
+	{ "mesg",	0,	ONOFF,		1,	1,	0 },
+	{ "modelines",	"ml",	ONOFF,		0,	0,	0 },
+	{ "number",	"nu",	ONOFF,		0,	0,	0 },
+	{ "open",	0,	ONOFF,		1,	1,	0 },
+	{ "optimize",	"opt",	ONOFF,		0,	0,	0 },
+	{ "paragraphs",	"para",	STRING,		0,	0,	paragraphs },
+	{ "prompt",	0,	ONOFF,		1,	1,	0 },
+	{ "readonly",	"ro",	ONOFF,		0,	0,	0 },
+	{ "redraw",	0,	ONOFF,		0,	0,	0 },
+	{ "remap",	0,	ONOFF,		1,	1,	0 },
+	{ "report",	0,	NUMERIC,	5,	5,	0 },
+	{ "scroll",	"scr",	NUMERIC,	12,	12,	0 },
+	{ "sections",	"sect",	STRING,		0,	0,	sections },
+	{ "shell",	"sh",	STRING,		0,	0,	shell },
+	{ "shiftwidth",	"sw",	NUMERIC,	TABS,	TABS,	0 },
+	{ "showmatch",	"sm",	ONOFF,		0,	0,	0 },
+	{ "showmode",	"smd",	ONOFF,		0,	0,	0 },
+	{ "slowopen",	"slow",	ONOFF,		0,	0,	0 },
+	{ "sourceany",	0,	ONOFF,		0,	0,	0 },
+	{ "tabstop",	"ts",	NUMERIC,	TABS,	TABS,	0 },
+	{ "taglength",	"tl",	NUMERIC,	0,	0,	0 },
+	{ "tags",	"tag",	STRING,		0,	0,	tags },
+	{ "term",	0,	OTERM,		0,	0,	ttylongname },
+	{ "terse",	0,	ONOFF,		0,	0,	0 },
+	{ "timeout",	"to",	ONOFF,		1,	1,	0 },
+	{ "ttytype",	"tty",	OTERM,		0,	0,	ttylongname },
+	{ "warn",	0,	ONOFF,		1,	1,	0 },
+	{ "window",	"wi",	NUMERIC,	23,	23,	0 },
+	{ "wrapscan",	"ws",	ONOFF,		1,	1,	0 },
+	{ "wrapmargin",	"wm",	NUMERIC,	0,	0,	0 },
+	{ "writeany",	"wa",	ONOFF,		0,	0,	0 },
+	{ 0,		0,	0,		0,	0,	0 }
 };
