@@ -82,6 +82,7 @@ static char sccsid[] = "@(#)ex_vops3.c	1.21 (gritter) 8/4/05";
 #include "ex.h"
 #include "ex_tty.h"
 #include "ex_vis.h"
+#include "compat.h"
 
 /*
  * Routines to handle structure.
@@ -127,7 +128,7 @@ llfind(bool pastatom, int cnt, void (*f)(int), line *limit)
 	 */
 	wasend = 0;
 	lf = f;
-	strcpy(save, linebuf);
+	strlcpy(save, linebuf, LBSIZE);
 	if (limit == 0)
 		limit = dir < 0 ? one : dol;
 	llimit = limit;
@@ -431,7 +432,7 @@ lsmatch(char *cp)
 	register char *scurs = cursor;
 
 	wcursor = cp;
-	strcpy(sp, linebuf);
+	strlcpy(sp, linebuf, LBSIZE);
 	*wcursor = 0;
 	strcpy(cursor, genbuf);
 	cursor = strend(linebuf) - 1;
